feat: first steps

--- a/_configuration.tex
+++ b/_configuration.tex
@@ -1,9 +1,9 @@
-\newabbrev{\authorname}{Vorname Nachname}
-\newabbrev{\authormail}{vnachname.mmt-b2015@fh-salzburg.ac.at}
-\newabbrev{\titlename}{Titel der Arbeit}
-\newabbrev{\advisor}{Titel Vorname Nachname}
+\newabbrev{\authorname}{Fabian Bliem}
+\newabbrev{\authormail}{fbliem.mmt-b2018@fh-salzburg.ac.at}
+\newabbrev{\titlename}{Pedestrian Route Proposal Satisfaction}
+\newabbrev{\advisor}{FH-Prof. DI Dr. Simon Ginzinger, MSc}
 %\newabbrev{\secondadvisor}{Titel Vorname Nachname}
-\newabbrev{\thesisdate}{dd.mm.yyyy}
-\newabbrev{\thesisrepo}{https://gitlab.mediacube.at/fhs1111/seminararbeit}
+\newabbrev{\thesisdate}{08.08.2022}
+\newabbrev{\thesisrepo}{https://github.com/fabianbliem/bachelorthesis}
 \newabbrev{\keywordsenglish}{word1, word2, word3}
 \newabbrev{\keywordsgerman}{wort1, wort2, wort3}
