--- a/body.tex
+++ b/body.tex
@@ -6,14 +6,26 @@
 \section{Introduction}
 \label{section:Introduction}
 
+The aim of this paper is to get a correlation between pedestrian traffic and route satisfaction. Given an open GPS Trajectories Dataset from the OpenStreetMap Project the research was conducted on the historical walking data in the city of Salzburg in Austria. Due to the historical growth of the city, footpaths, and pedestrian areas along with roads for private and public transport are limited to change and urban development (SOURCE). 
+
+Historical traffic pattern mining and analysis for traffic forecasting and improving traffic flow is nothing new to vehicle traffic management. Multiple studies focus on collecting data, analyzing patterns, and forecasting traffic flow for vehicle traffic. 
+
+Is it possible to increase satisfaction by recommending alternative, less populated routes to tourist attractions using pedestrian path model techniques?
+
 This template is used for seminar papers, bachelor and master theses at MultiMediaTechnology of the Salzburg University of Applied Sciences. 
 
 The structure of the template fits many theses works. Seminar papers often require their own structure as it is a literature review on a specific topic and does not present your own work.
 
 Outline the research field and lead towards your research question. How is the investigated issue resolved in related work? What are limitations of these solutions? What is your contribution to find a solution?
 
+\section{Background}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi luctus lacinia sagittis. Maecenas vestibulum ex quam, eget placerat mi pharetra ut. Cras molestie lectus eget efficitur sagittis. Ut porttitor lobortis odio, eget commodo velit consectetur vitae. Quisque ornare auctor neque eleifend bibendum. Praesent molestie efficitur pulvinar. Nullam lobortis lacus sit amet mi tempor, sed suscipit dolor euismod. Pellentesque eget orci eget risus pharetra sodales sed vel nunc. Praesent consequat urna eu libero vestibulum porttitor.
+
 \section{Related Work}
 Introduce why this specific related work is important for your own work. Which areas do you cover and why? What do you take as inspiration and what do you do differently/improve upon? 
+
+\section{Method}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi luctus lacinia sagittis. Maecenas vestibulum ex quam, eget placerat mi pharetra ut. Cras molestie lectus eget efficitur sagittis. Ut porttitor lobortis odio, eget commodo velit consectetur vitae. Quisque ornare auctor neque eleifend bibendum. Praesent molestie efficitur pulvinar. Nullam lobortis lacus sit amet mi tempor, sed suscipit dolor euismod. Pellentesque eget orci eget risus pharetra sodales sed vel nunc. Praesent consequat urna eu libero vestibulum porttitor.
 
 \section{System Overview}
 Provide a high level overview of your system, approach, etc. 
