--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 %\documentclass[ngerman, paper]{mmt} % use for seminar paper
 %\documentclass[ngerman, reviewversion]{mmt} % use for anonymized review version 
 %\documentclass[ngerman, bachelorthesis]{mmt} % use for Bachelor thesis
-\documentclass[ngerman, masterthesis]{mmt} % use for Master thesis
+\documentclass[english, bachelorthesis]{mmt} % use for Master thesis
 
 \usepackage{mathptmx}
 \usepackage{graphicx}
