feat: saving point

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -7,6 +7,9 @@
 \begin{table}[h]		
 	\begin{tabular}{ll}
 		TCP & Transmission Control Protocol \\
-		VR & Virtual Reality \\			
+		VR & Virtual Reality \\
+		OSM & OpenStreetMap \\
+		JOSM & Java OpenStreetMap editor \\
+		BBOX & Bounding Box \\
 	\end{tabular}
 \end{table}
