--- a/bibliography.bib
+++ b/bibliography.bib
@@ -734,3 +734,10 @@ url = {https://doi.org/10.1016/j.jtrangeo.2018.11.005},
 volume = {74},
 year = {2019}
 }
+@misc{ wiki:xxx,
+author = "OpenStreetMap Wiki",
+title = "API_v0.6 --- OpenStreetMap Wiki{,} ",
+year = "2022",
+url = "https://wiki.openstreetmap.org/wiki/API_v0.6#GPS_traces",
+note = "[Online; accessed 22-July-2022]"
+}
